Test/dafny4/Regression14.dfy.expect
Regression14.dfy(11,15): Error: member Func does not exist in class MyClass
Regression14.dfy(22,17): Error: member D does not exist in class MyClass
2 resolution/type errors detected in Regression14.dfy
